# OpenHands-CLI

./: pyproject.toml
.github/workflows/: check-package-versions.yml
openhands_cli/: agent_chat.py  setup.py  simple_main.py  terminal_compat.py
openhands_cli/acp_impl/: agent.py  event.py
openhands_cli/argparsers/: main_parser.py
openhands_cli/refactor/: textual_app.py  textual_app.tcss
openhands_cli/refactor/content/: splash.py
openhands_cli/refactor/core/: commands.py  conversation_runner.py  theme.py
openhands_cli/refactor/modals/: __init__.py  confirmation_modal.py  confirmation_modal.tcss  exit_modal.py  exit_modal.tcss
openhands_cli/refactor/modals/settings/: choices.py  settings_screen.py  settings_screen.tcss
openhands_cli/refactor/panels/: confirmation_panel.py  confirmation_panel_style.py  mcp_panel_style.py  mcp_side_panel.py
openhands_cli/refactor/widgets/: autocomplete.py  input_field.py  non_clickable_collapsible.py  richlog_visualizer.py  status_line.py
openhands_cli/tui/settings/: settings_screen.py
openhands_cli/user_actions/: types.py
tests/: test_terminal_compat.py
tests/refactor/: __init__.py  test_commands.py  test_splash.py  test_theme.py
tests/refactor/modals/: __init__.py  test_exit_modal.py
tests/refactor/widgets/: test_autocomplete.py  test_input_field.py  test_non_clickable_collapsible.py  test_richlog_visualizer.py  test_status_line.py
